<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/tv_login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten_thu_vien"
        android:layout_below="@+id/img_login_logo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:id="@+id/tipl_login_username"
        android:hint="@string/ten_dang_nhap"
        android:layout_below="@+id/tv_login_name">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_username"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:id="@+id/tipl_login_password"
        android:hint="@string/mat_khau"
        android:layout_below="@+id/tipl_login_username">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>
    <CheckBox
        android:id="@+id/ckb_login_checkluumk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luu_mk"
        android:layout_below="@+id/tipl_login_password"
        android:layout_marginLeft="32dp"/>
    <LinearLayout
        android:id="@+id/linl_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/ckb_login_checkluumk">
        <Button
            android:onClick="login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_login_dangnhap"
            android:text="@string/dang_nhap"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:onClick="huy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_login_huy"
            android:text="@string/huy"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>



</RelativeLayout>